# kaspi_document_service

./: .env.example  .gitignore  Dockerfile  REPORT.md  docker-compose.yml  load_test_report.html  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_outbox.py
app/: main.py
app/api/: http_errors.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  documents.py  health.py
app/controllers/: auth_controller.py  document_controller.py  health_controller.py
app/core/: config.py  logging.py  redis.py  security.py
app/db/: base.py  session.py  types.py
app/dependencies/: auth.py  controllers.py
app/domain/: exceptions.py
app/models/: __init__.py  document.py  outbox.py
app/repositories/: document_repository.py  outbox_repository.py  user_repository.py
app/schemas/: document.py
app/services/: auth_service.py  document_service.py  kafka_producer.py  outbox_service.py
app/workers/: kafka_consumer.py  outbox_worker.py
monitoring/: prometheus.yml
scripts/: locustfile.py  produce_documents.py  seed_users.py
tests/: helpers.py
tests/e2e/: conftest.py  test_api.py
tests/integration/: conftest.py  test_concurrency.py
tests/unit/: test_controllers.py  test_services.py
